# rust-pulse

./: .Cargo.toml.swp  Cargo.toml  README.md
core-engine/: Cargo.toml  README.md
core-engine/examples/: check_core.rs
core-engine/src/: lib.rs  manager.rs  models.rs  monitor.rs
variants/: package-lock.json
variants/01-tauri-react/: package-lock.json  package.json
variants/01-tauri-react.bak/: index.html  package-lock.json  package.json
variants/01-tauri-react.bak/src/: App.tsx
variants/01-tauri-react.bak/src-tauri/: Cargo.toml  tauri.conf.json
variants/01-tauri-react.bak/src-tauri/capabilities/: default.json
variants/01-tauri-react.bak/src-tauri/src/: lib.rs
variants/01-tauri-react/src/: App.css  App.tsx
variants/01-tauri-react/src-tauri/: .env  Cargo.toml  tauri.conf.json
variants/01-tauri-react/src-tauri/src/: lib.rs
variants/v2-dioxus-native/: Cargo.toml
variants/v2-dioxus-native/assets/: main.css
variants/v2-dioxus-native/src/: main.rs
